# Pubmed_fetcher

./: README.md  fetch_papers.py  main.py  pyproject.toml
output/: results.csv
